# Web-based-game

./: CHANGELOG.md  Main.hs  README.md  maze.hs  number_guessing_game.hs  project1.cabal  readme.txt
app/: Main.hi  Main.hs  generate_random_maze.hi  generate_random_maze.hs  level.txt  level_1.txt  maze.txt  welcome.hi  welcome.hs
app/gd-3000.7.3/gd-3000.7.3/Graphics/: GD.hsc
app/gd-3000.7.3/gd-3000.7.3/Graphics/GD/: ByteString.hs  Internal.hsc
app/gd-3000.7.3/gd-3000.7.3/Graphics/GD/ByteString/: Lazy.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
