cabal-version:      2.4
name:               project1
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:

-- The package author(s).
-- author:
maintainer:         akafle1@unm.edu

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable project1
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base >= 4.14 && < 4.18,
                      random,
                      gloss, 
                      gloss-juicy,
                      GLUT >= 2.7.0.16 && < 2.8,
                      JuicyPixels >= 3.3.5 && < 3.4,
                      directory >= 1.3.7.1 && < 1.4,
                      gd 
    hs-source-dirs:   app
    default-language: Haskell2010
